--- a/.github/workflows/germany.yml
+++ b/.github/workflows/germany.yml
@@ -1,16 +1,18 @@
-name: Test
+name: Germany
 
 on:
   push:
-  schedule:
-    - cron: '*/30 * * * *'
+  workflow_run:
+    workflows: [ "Germany" ]
+    types:
+      - completed
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 10
     strategy:
       matrix:
-        tag: ["regression"]
+        tag: [ "monitor_germany" ]
     steps:
       - uses: actions/checkout@v2
       - name: Cache requirements
