--- a/.github/workflows/germany2.yml
+++ b/.github/workflows/germany2.yml
@@ -1,9 +1,9 @@
-name: Germany
+name: Germany2
 
 on:
   push:
   workflow_run:
-    workflows: [ "Germany2" ]
+    workflows: [ "Germany" ]
     types:
       - completed
 jobs:
