update workflow run

--- a/.github/workflows/germany2.yml
+++ b/.github/workflows/germany2.yml
@@ -1,10 +1,7 @@
 name: Germany2
 
 on:
-  workflow_run:
-    workflows: [ "Germany" ]
-    types:
-      - completed
+  push
 jobs:
   build:
     runs-on: ubuntu-latest
