--- a/.github/workflows/germany.yml
+++ b/.github/workflows/germany.yml
@@ -1,7 +1,6 @@
 name: Germany
 
 on:
-  push:
   workflow_run:
     workflows: [ "Germany2" ]
     types:
@@ -36,10 +35,18 @@ jobs:
           sudo tar -zxvf allure-2.7.0.tgz -C /opt/
           sudo ln -s /opt/allure-2.7.0/bin/allure /usr/bin/allure
           rm -rf allure-2.7.0.tgz
+      - name: send custom message start
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🟢 GITHUB JOB IS STARTED 🟢
       - name: Test with behave
         run: |
           behave --no-skipped -f allure_behave.formatter:AllureFormatter -o allure-results --tags=${{ matrix.tag }}
-      - name: send custom message
+      - name: send custom message end
         if: always()
         uses: appleboy/telegram-action@master
         with:
