update workflow run

--- a/.github/workflows/germany.yml
+++ b/.github/workflows/germany.yml
@@ -1,7 +1,10 @@
 name: Germany
 
 on:
-  pull_request:
+  workflow_run:
+    workflows: [ "Germany2" ]
+    types:
+      - completed
 jobs:
   build:
     runs-on: ubuntu-latest
