--- a/.github/workflows/germany2.yml
+++ b/.github/workflows/germany2.yml
@@ -1,7 +1,10 @@
 name: Germany2
 
 on:
-  pull_request:
+  workflow_run:
+    workflows: [ "Germany" ]
+    types:
+      - completed
 jobs:
   build:
     runs-on: ubuntu-latest
