--- a/.github/workflows/germany.yml
+++ b/.github/workflows/germany.yml
@@ -42,7 +42,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🟢 GITHUB JOB IS STARTED 🟢
+            🟢 GERMANY JOB IS STARTED 🟢
       - name: Test with behave
         run: |
           behave --no-skipped -f allure_behave.formatter:AllureFormatter -o allure-results --tags=${{ matrix.tag }}
@@ -53,4 +53,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🐞 GITHUB JOB IS STOPPED 🐞
+            🐞 GERMANY JOB IS STOPPED 🐞
