--- a/.github/workflows/italy_consulate.yml
+++ b/.github/workflows/italy_consulate.yml
@@ -1,7 +1,11 @@
-name: Italy consulate
+name: Italy
 
 on:
   push:
+  workflow_run:
+    workflows: [ "Italy2" ]
+    types:
+      - completed
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,7 +43,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🟢 GITHUB JOB IS STARTED 🟢
+            🟢 ITALY JOB IS STARTED 🟢
       - name: Test with behave
         run: |
           behave --no-skipped -f allure_behave.formatter:AllureFormatter -o allure-results --tags=${{ matrix.tag }}
@@ -50,4 +54,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🐞 GITHUB JOB IS STOPPED 🐞
+            🐞 ITALY JOB IS STOPPED 🐞
