--- a/.github/workflows/italy_consulate2.yml
+++ b/.github/workflows/italy_consulate2.yml
@@ -1,8 +1,8 @@
-name: Germany2
+name: Italy2
 
 on:
   workflow_run:
-    workflows: [ "Germany" ]
+    workflows: [ "Italy" ]
     types:
       - completed
 jobs:
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 355
     strategy:
       matrix:
-        tag: [ "monitor_germany" ]
+        tag: [ "monitor_italy" ]
     steps:
       - uses: actions/checkout@v2
       - name: Cache requirements
@@ -42,15 +42,15 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🟢 GERMANY2 JOB IS STARTED 🟢
+            🟢 ITALY2 JOB IS STARTED 🟢
       - name: Test with behave
         run: |
           behave --no-skipped -f allure_behave.formatter:AllureFormatter -o allure-results --tags=${{ matrix.tag }}
-      - name: send custom message
+      - name: send custom message end
         if: always()
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🐞 GERMANY2 JOB IS STOPPED 🐞
+            🐞 ITALY2 JOB IS STOPPED 🐞
