--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -1,14 +1,11 @@
 name: Germany2
 
 on:
-  workflow_run:
-    workflows: [ "Germany" ]
-    types:
-      - completed
+  schedule:
+    - cron: '*/5 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 355
     strategy:
       matrix:
         tag: [ "monitor_germany" ]
