--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -2,10 +2,11 @@ name: Germany2
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/30 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 25
     strategy:
       matrix:
         tag: [ "monitor_germany" ]
