--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -1,6 +1,7 @@
 name: Germany2
 
 on:
+  push:
   schedule:
     - cron: '* */6 * * *'
 jobs:
@@ -43,7 +44,7 @@ jobs:
             🟢 GERMANY JOB IS STARTED 🟢
       - name: Test with behave
         run: |
-          behave --no-skipped -f allure_behave.formatter:AllureFormatter -o allure-results --tags=${{ matrix.tag }}
+          python test.py
       - name: send custom message
         if: always()
         uses: appleboy/telegram-action@master
