--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -44,7 +44,7 @@ jobs:
             🟢 GERMANY JOB IS STARTED 🟢
       - name: Test with behave
         run: |
-          python test.py
+          python3 test.py
       - name: send custom message
         if: always()
         uses: appleboy/telegram-action@master
