--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -3,7 +3,7 @@ name: Germany
 on:
   push:
   schedule:
-    - cron: '* */6 * * *'
+    - cron: '0 */6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
