--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -44,6 +44,9 @@ jobs:
             🟢 GERMANY JOB IS STARTED 🟢
       - name: Test with behave
         run: |
+          REST_PASSWORD=${{ secrets.REST_PASSWORD }}
+          GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
+          python3 -c 'import os;print(os.environ['REST_PASSWORD'])
           python3 run_germany_scan.py
       - name: send custom message
         if: always()
