--- a/.github/workflows/germany5.yml
+++ b/.github/workflows/germany5.yml
@@ -47,6 +47,7 @@ jobs:
           REST_PASSWORD=${{ secrets.REST_PASSWORD }}
           GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
           python3 -c 'import os;print(os.environ['REST_PASSWORD'])
+          python3 -c 'import os;print(os.environ['GERMANY_REST_URL'])
           python3 run_germany_scan.py
       - name: send custom message
         if: always()
