--- a/.github/workflows/germany_tourism.yml
+++ b/.github/workflows/germany_tourism.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           REST_PASSWORD=${{ secrets.REST_PASSWORD }}
           GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
-          python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN327" "2845" "Tourism"
+          python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN327" "2845" "Tourism" "$CAPTCHA_API_KEY"
       - name: send custom message
         if: always()
         uses: appleboy/telegram-action@master
