--- a/.github/workflows/germany_schengen.yml
+++ b/.github/workflows/germany_schengen.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           REST_PASSWORD=${{ secrets.REST_PASSWORD }}
           GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
+          CAPTCHA_API_KEY=${{ secrets.$CAPTCHA_API_KEY }}
           python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN327" "373" "Inviting" "$CAPTCHA_API_KEY"
       - name: send custom message
         if: always()
