--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-selenium==3.141.0
+selenium
 allure-behave
 google-api-python-client
 google-auth-httplib2
@@ -16,3 +16,5 @@ requests
 beautifulsoup4
 behave
 lxml
+undetected-chromedriver
+selenium-wire
