--- a/.github/workflows/germany_tourism.yml
+++ b/.github/workflows/germany_tourism.yml
@@ -4,6 +4,9 @@ on:
   push:
   schedule:
     - cron: '0 */6 * * *'
+concurrency:
+  group: environment-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
