--- a/.github/workflows/germany_schengen.yml
+++ b/.github/workflows/germany_schengen.yml
@@ -4,9 +4,6 @@ on:
   push:
   schedule:
     - cron: '0 */6 * * *'
-concurrency:
-  group: ${{ github.head_ref }}
-  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +12,10 @@ jobs:
       matrix:
         tag: [ "SCHENGEN" ]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.10.0
+        with:
+          access_token: ${{ github.token }}
       - uses: actions/checkout@v2
       - name: Cache requirements
         uses: actions/cache@v2
