--- a/.github/workflows/germany_national.yml
+++ b/.github/workflows/germany_national.yml
@@ -1,4 +1,4 @@
-name: Germany tourism
+name: Germany schengen
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: [ "Tourism" ]
+        tag: [ "NATIONAL" ]
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
@@ -38,19 +38,19 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🟢 GERMANY TOURISM JOB IS STARTED 🟢
+            🟢 GERMANY NATIONAL JOB IS STARTED 🟢
       - name: create-json
-        id: create-json
-        uses: jsdaniell/create-json@1.1.2
-        with:
-          name: "captcha.json"
-          json: ${{ secrets.DB_KEY }}
+          id: create-json
+          uses: jsdaniell/create-json@1.1.2
+          with:
+            name: "config.json"
+            json: ${{ secrets.CONFIG }}
       - name: Test with behave
         run: |
           REST_PASSWORD=${{ secrets.REST_PASSWORD }}
           GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
           CAPTCHA_API_KEY=${{ secrets.CAPTCHA_API_KEY }}
-          python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN327" "2845" "Tourism" "$CAPTCHA_API_KEY"
+          python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN340" "375" "National" "$CAPTCHA_API_KEY"
       - name: send custom message
         if: always()
         uses: appleboy/telegram-action@master
@@ -58,4 +58,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            🐞 GERMANY TOURISM JOB IS STOPPED 🐞
+            🐞 GERMANY NATIONAL JOB IS STOPPED 🐞
