--- a/.github/workflows/kaliningrad_national.yml
+++ b/.github/workflows/kaliningrad_national.yml
@@ -8,6 +8,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Public IP
+        id: ip
+        uses: haythem/public-ip@v1.2
+      - name: Print Public IP
+        run: |
+          echo ${{ steps.ip.outputs.ipv4 }}
+          echo ${{ steps.ip.outputs.ipv6 }}
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
         with:
@@ -24,6 +31,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - name: send custom message start
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🟢 KALININGRAD IP 🟢
+            ipv4: ${{ steps.ip.outputs.ipv4 }}
+            ipv6: ${{ steps.ip.outputs.ipv6 }}
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
