--- a/.github/workflows/kaliningrad_national.yml
+++ b/.github/workflows/kaliningrad_national.yml
@@ -6,7 +6,7 @@ on:
     - cron: '* * * * *'
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
