--- a/.github/workflows/hungary.yml
+++ b/.github/workflows/hungary.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: ['0', '1']
+        tag: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
