--- a/.github/workflows/hungary.yml
+++ b/.github/workflows/hungary.yml
@@ -1,15 +1,14 @@
 name: Hungary nightly
 
 on:
-  push:
   schedule:
-    - cron: '20 13 * * *'
+    - cron: '0 21 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: ['0', '1']
+        tag: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
