--- a/.github/workflows/hungary.yml
+++ b/.github/workflows/hungary.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']
+        tag: ['1', '2', '3', '4', '5', '6', '7']
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
@@ -38,4 +38,4 @@ jobs:
           json: ${{ secrets.CONFIG }}
       - name: Test python
         run: |
-          python3 visa_hungary/hungary.py ${{ matrix.tag }}
+          python3 visa_hungary/hungary.py ${{ matrix.tag }} $104
