--- a/.github/workflows/hungary_2us.yml
+++ b/.github/workflows/hungary_2us.yml
@@ -1,4 +1,8 @@
-name: Hungary nightly
+name: Hungary 105 110
+
+on:
+  schedule:
+    - cron: '30 21 * * *'
 
 jobs:
   build:
@@ -30,4 +34,4 @@ jobs:
           json: ${{ secrets.CONFIG }}
       - name: Test python
         run: |
-          python3 visa_hungary/hungary.py ${{ matrix.tag }} "104"
+          python3 visa_hungary/hungary.py ${{ matrix.tag }} "105" "110"
