--- a/.github/workflows/hungary_107.yml
+++ b/.github/workflows/hungary_107.yml
@@ -1,4 +1,4 @@
-name: Hungary 105 110
+name: Hungary 107
 
 on:
   schedule:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: ['1', '2', '3', '4', '5', '6', '7']
+        tag: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20']
     steps:
       - uses: actions/checkout@v2
       - name: Cache requirements
@@ -34,4 +34,4 @@ jobs:
           json: ${{ secrets.CONFIG }}
       - name: Test python
         run: |
-          python3 visa_hungary/hungary.py ${{ matrix.tag }} "105" "110"
+          python3 visa_hungary/hungary.py ${{ matrix.tag }} "107"
