--- a/.github/workflows/thai.yml
+++ b/.github/workflows/thai.yml
@@ -1,14 +1,12 @@
-name: Germany schengen
+name: Thai
 
 on:
+  push:
   schedule:
     - cron: '0 */6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        tag: [ "SCHENGEN" ]
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.10.0
@@ -40,4 +38,4 @@ jobs:
           REST_PASSWORD=${{ secrets.REST_PASSWORD }}
           GERMANY_REST_URL=${{ secrets.GERMANY_REST_URL }}
           CAPTCHA_API_KEY=${{ secrets.CAPTCHA_API_KEY }}
-          python3 run_germany_scan.py "$REST_PASSWORD" "$GERMANY_REST_URL" "TERMIN327" "373" "Inviting" "$CAPTCHA_API_KEY"
+          python3 visa_thai/thai.py
